fix loading container jump and edit hangman drawing

--- a/src/styles/HangmanDrawing.module.css
+++ b/src/styles/HangmanDrawing.module.css
@@ -16,14 +16,14 @@
 
 .hangman__noose {
   height: 50px;
-  width: 10px;
+  width: 5px;
   background: black;
   position: absolute;
   right: 150px;
 }
 
 .hangman__gallows__right {
-  height: 10px;
+  height: 5px;
   width: 200px;
   background: black;
   margin-left: 50px;
@@ -31,7 +31,7 @@
 
 .hangman__gallows__left {
   height: 100%;
-  width: 10px;
+  width: 5px;
   background: black;
   margin-left: 50px;
 }
